[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Textures/StoryCaroline/CarolineStatic-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/StoryCaroline/CarolineStatic-0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/StoryCaroline/CarolineStatic-3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/StoryCaroline/CarolineStatic-2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/StoryCaroline/CarolineSmallAnim2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Katkuk-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Textures/StoryCaroline/eyesAndMouths.png" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/StoryCaroline/Caroline.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Stories/StoryCaroline/CarolineWindowScene.gd" type="Script" id=9]

[sub_resource type="Animation" id=5]
resource_name = "walkIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1420.5, 968.183 ), Vector2( 1205.28, 968.183 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "caroline"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("eyess:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mouth:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 3, 3, 6 ]
}

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "boom"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.1, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "boom"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "boom"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 2.1, 2.2, 2.3, 2.4, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 2.1, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="CarolineWindowScene" type="Node2D"]
position = Vector2( 2.95654, 5.76019 )
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 803.595
margin_top = 393.918
margin_right = 1431.6
margin_bottom = 1135.92
mouse_filter = 2
color = Color( 0.647059, 0.368627, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = -41.0
margin_right = 2291.0
margin_bottom = 373.0
mouse_filter = 2
color = Color( 0.803922, 0.662745, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Caroline" type="Sprite" parent="."]
position = Vector2( 1420.5, 968.183 )
scale = Vector2( 1.09968, 1.09968 )
texture = ExtResource( 8 )
hframes = 3
vframes = 3

[node name="eyess" type="Sprite" parent="Caroline"]
position = Vector2( 8.87109, -152.119 )
rotation = -0.0484033
scale = Vector2( 0.213583, 0.213583 )
texture = ExtResource( 7 )
hframes = 5
vframes = 4

[node name="mouth" type="Sprite" parent="Caroline"]
position = Vector2( 16.4131, -83.3662 )
rotation = -0.0484033
scale = Vector2( 0.0577021, 0.0577021 )
texture = ExtResource( 7 )
hframes = 5
vframes = 4
frame = 3

[node name="WalkIn" type="AnimationPlayer" parent="Caroline"]
anims/walkIn = SubResource( 5 )

[node name="Caroline" type="AnimationPlayer" parent="Caroline"]
autoplay = "caroline"
anims/caroline = SubResource( 6 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = -60.0
margin_top = -36.0
margin_right = 753.0
margin_bottom = 1742.0
mouse_filter = 2
color = Color( 0.803922, 0.662745, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 628.595
margin_top = 1137.92
margin_right = 2561.6
margin_bottom = 1741.92
rect_scale = Vector2( 0.861683, 1 )
mouse_filter = 2
color = Color( 0.803922, 0.662745, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1463.6
margin_top = 194.918
margin_right = 2293.6
margin_bottom = 1355.92
mouse_filter = 2
color = Color( 0.803922, 0.662745, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bricks1" type="Sprite" parent="."]
position = Vector2( 1788.23, 1265.29 )
scale = Vector2( 1.13262, 1.13262 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1138.91, 1894.44, 224.757, 143.263 )

[node name="Bricks2" type="Sprite" parent="."]
position = Vector2( 1510.44, 173.865 )
scale = Vector2( 1.13262, 1.13262 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1362.53, 1894.44, 263.409, 143.263 )

[node name="Bricks3" type="Sprite" parent="."]
position = Vector2( 523.875, 1258.41 )
scale = Vector2( 1.13262, 1.13262 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1807.99, 1870.49, 229.587, 154.092 )

[node name="Bricks4" type="Sprite" parent="."]
position = Vector2( 1937.74, 725.62 )
rotation = 1.57079
scale = Vector2( 1.13262, 1.13262 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1637.59, 1897.25, 78.9142, 124.135 )

[node name="Bricks5" type="Sprite" parent="."]
position = Vector2( 257.495, 671.477 )
rotation = 1.57079
scale = Vector2( 1.13262, 1.13262 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1869.5, 1159.5, 143.896, 185.947 )

[node name="Bricks6" type="Sprite" parent="."]
position = Vector2( 620.085, 204.005 )
rotation = 1.57079
scale = Vector2( 1.13262, 1.13262 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1794.24, 1241.46, 67.3406, 133.743 )

[node name="Curtain" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.403922 )
position = Vector2( 1083.59, 442.016 )
scale = Vector2( 1.13176, 0.357373 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 926.721, 1464.49, 588.541, 498.327 )

[node name="Window" type="Sprite" parent="."]
position = Vector2( 1095.58, 798.849 )
scale = Vector2( 1.13176, 1.25141 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1009.52, -19.1913, 808.72, 788.363 )

[node name="DoorL" type="Area2D" parent="."]

[node name="DoorLopen" type="Sprite" parent="DoorL"]
visible = false
position = Vector2( 439.703, 746.908 )
rotation = -1.58226
scale = Vector2( 1.13444, 1.12838 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( -6.11752, 1497.97, 922.64, 409.473 )

[node name="DoorLclosed" type="Sprite" parent="DoorL"]
position = Vector2( 892.099, 745.039 )
rotation = -0.0164381
scale = Vector2( 1.13262, 1.13262 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1493.68, -4.50284, 399.041, 923.023 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DoorL"]
polygon = PoolVector2Array( 225.042, 244.399, 222.372, 1264.22, 1090.02, 1264.22, 1074, 249.739 )

[node name="DoorR" type="Area2D" parent="."]

[node name="DoorRclosed" type="Sprite" parent="DoorR"]
position = Vector2( 1296.02, 744.02 )
rotation = -1.58905
scale = Vector2( 1.13194, 1.13194 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( -7.32819, 1461.37, 928.172, 389.525 )

[node name="DoorRopen" type="Sprite" parent="DoorR"]
visible = false
position = Vector2( 1730.45, 734.978 )
rotation = -1.53958
scale = Vector2( 1.14352, 1.14352 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 914.559, 1492.24, 915.296, 392.166 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DoorR"]
polygon = PoolVector2Array( 1104.49, 241.765, 1126.7, 1257.26, 1935.93, 1260.44, 1945.45, 248.112 )

[node name="Label" type="Label" parent="."]
margin_left = 395.052
margin_top = 1359.86
margin_right = 1852.05
margin_bottom = 1764.86
custom_fonts/font = SubResource( 1 )
text = "When a brave young woman called Caroline saw what was going on, she had to do something about it."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boom1" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 106.461, 1545.5 )
scale = Vector2( 2.63925, 2.63925 )
texture = ExtResource( 5 )
hframes = 5
vframes = 5
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boom1"]
autoplay = "boom"
playback_speed = 1.5
anims/boom = SubResource( 2 )

[node name="Boom2" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1390.51, 8.72168 )
scale = Vector2( 1.28123, 1.28123 )
texture = ExtResource( 5 )
hframes = 5
vframes = 5
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boom2"]
autoplay = "boom"
playback_speed = 1.5
anims/boom = SubResource( 3 )

[node name="Boom3" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 2233.84, 932.573 )
scale = Vector2( 2.51021, 2.51021 )
texture = ExtResource( 5 )
hframes = 5
vframes = 5
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boom3"]
autoplay = "boom"
playback_speed = 1.5
anims/boom = SubResource( 4 )

[connection signal="input_event" from="DoorL" to="." method="_on_DoorL_input_event"]
[connection signal="input_event" from="DoorR" to="." method="_on_DoorR_input_event"]
